--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "cypress": "^15.7.1",
     "eslint": "^9.39.1",
     "globals": "^16.5.0",
     "vitest": "^4.0.8"
